fix side navigation scroll behavior on mobile

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -20,16 +20,20 @@
 .navigation {
   position: fixed;
   left: 0;
+  overflow-y: auto;
   top: var(--header-height);
   width: var(--side-nav-width);
   height: calc(100vh - var(--header-height));
-  overflow-y: hidden;
   border-right: 1px solid var(--color-border);
   padding-top: var(--spacing-l);
   padding-bottom: var(--spacing-xl);
 
-  &:hover {
-    overflow-y: auto;
+  @media (min-width: $breakpoint-small) {
+    overflow-y: hidden;
+
+    &:hover {
+      overflow-y: auto;
+    }
   }
 }
 
@@ -70,6 +74,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  width: 100%;
   color: var(--color-navigation-link);
   padding-left: var(--spacing-s);
   font-size: var(--font-body);
